<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="android.assignment.models.Movie" />

    </data>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/htab_collapse_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_192sdp"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:titleEnabled="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:transitionName="@string/STR_DETAILS_TRANSITION"
                            android:visibility="visible"
                            app:layout_constraintDimensionRatio="h,50:40" />

                        <Button
                            android:id="@+id/more_media_tv"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/more_media"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13ssp" />
                    </RelativeLayout>

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/transparent"
                        android:elevation="@dimen/_7sdp"
                        app:contentInsetEnd="0dp"
                        app:contentInsetLeft="0dp"
                        app:contentInsetRight="0dp"
                        app:contentInsetStart="0dp"
                        app:layout_collapseMode="pin">

                        <android.support.constraint.ConstraintLayout
                            android:id="@+id/rl_top_bar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ProgressBar
                                android:id="@+id/progress_bar_title"
                                style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_alignWithParentIfMissing="true"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="@dimen/_7sdp"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/title_tv_tb"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageButton
                                android:id="@+id/back_ib_tb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:background="?selectableItemBackgroundBorderless"
                                android:onClick="onClose"
                                android:padding="@dimen/_4sdp"
                                android:src="@{@drawable/ic_back_white}"
                                android:tint="@color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:src="@drawable/ic_back_white" />


                            <TextView
                                android:id="@+id/title_tv_tb"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_alignWithParentIfMissing="true"
                                android:layout_marginStart="@dimen/_17sdp"
                                android:layout_marginEnd="@dimen/_17sdp"
                                android:ellipsize="end"
                                android:gravity="center_vertical"
                                android:singleLine="true"
                                android:text="@string/STR_MOVIE_DETAILS"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/progress_bar_title"
                                app:layout_constraintStart_toEndOf="@+id/back_ib_tb"
                                app:layout_constraintTop_toTopOf="parent" />

                        </android.support.constraint.ConstraintLayout>


                    </android.support.v7.widget.Toolbar>
                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:visibility="visible"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:id="@+id/rl_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_8sdp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tv_details_label"
                        style="@style/details_section_header_text_style"
                        android:text="@string/DETAILS" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_details_label"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text='@{movie.title}'
                        android:textColor="@color/text_color_4"
                        android:textSize="@dimen/_16ssp"
                        tools:text="One month Free Parking| gated community etct etc" />


                    <android.assignment.ui.ExpandableTextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_title"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:clickable="false"
                        android:text='@{movie.overview}'
                        android:textColor="@color/text_color_3"
                        android:textSize="@dimen/_12sdp"
                        app:colorClickableText="@color/bg_color_1"
                        app:trimCollapsedText="@string/STR_READ_MORE"
                        app:trimExpandedText="@string/STR_READ_LESS"
                        app:trimLength="82"
                        app:trimMode='trimModeLength'
                        tools:text="ajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsjaajkaghsjhasakjshjkahsahsja" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/price_address_constraint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_description"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:background="@color/white"
                        android:elevation="4dp">

                        <include
                            android:id="@+id/status_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/released}'
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:value='@{movie.status}' />

                        <include
                            android:id="@+id/ot_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/original_title}'
                            app:layout_constraintTop_toBottomOf="@+id/status_section"
                            app:value='@{movie.originalTitle}' />

                        <include
                            android:id="@+id/tagline_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/tag_line}'
                            app:layout_constraintTop_toBottomOf="@+id/ot_section"
                            app:value='@{movie.tagline}' />

                        <include
                            android:id="@+id/release_date_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/released}'
                            app:layout_constraintTop_toBottomOf="@+id/tagline_section"
                            app:value='@{movie.releaseDate}' />

                        <include
                            android:id="@+id/spoken_lang_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/language}'
                            app:layout_constraintTop_toBottomOf="@+id/release_date_section"
                            app:value='@{movie.getSpokenLanguage()}' />

                        <include
                            android:id="@+id/pc_section"
                            layout="@layout/row_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:label='@{@string/production_country}'
                            app:layout_constraintTop_toBottomOf="@+id/spoken_lang_section"
                            app:value='@{movie.getProductionCounties()}' />


                    </android.support.constraint.ConstraintLayout>
                </RelativeLayout>

            </android.support.v4.widget.NestedScrollView>


        </android.support.design.widget.CoordinatorLayout>


    </RelativeLayout>
</layout>